--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,7 +6,7 @@ on: [push]
 jobs:
   test-lint:
     name: Test and Lint
-    runs-on: ubuntu-latest #ubuntu-20.4
+    runs-on: ubuntu-20.04 #ubuntu-latest #ubuntu-20.4
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
